syntax = "proto3";
package lblockchainpb;

message RequestBlock{
    bytes hash = 1;
}